--- a/src/assets/scss/argon.scss
+++ b/src/assets/scss/argon.scss
@@ -1,7 +1,7 @@
 /*!
 
 =========================================================
-* Vue Argon Design System - v1.1.0
+* Imago - v1.1.0
 =========================================================
 
 * Product Page: https://www.creative-tim.com/product/argon-design-system
